--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -5,56 +5,52 @@
       <tool tool-id="symfony" tool-name="Symfony"/>
     </header>
     <body>
-      <trans-unit id="25f7347236b51a5eae4ba01a7862cb55" resname="Schedule">
-        <source>Schedule</source>
+      <trans-unit id="8e9d79f792bff551c8573d9012714968" resname="job.schedule.title">
+        <source>job.schedule.title</source>
         <target>Schedule</target>
       </trans-unit>
-      <trans-unit id="49ee3087348e8d44e1feda1917443987" resname="Name">
-        <source>Name</source>
-        <target>Name</target>
-      </trans-unit>
-      <trans-unit id="ee97be03cb04119af45014d815621ce1" resname="Command">
-        <source>Command</source>
+      <trans-unit id="cb983c8e6d6cdf86084f51f41f09dc33" resname="job.command">
+        <source>job.command</source>
         <target>Command</target>
       </trans-unit>
-      <trans-unit id="c9cc8cce247e49bae79f15173ce97354" resname="Save">
-        <source>Save</source>
+      <trans-unit id="47eaf61660b3dbea76877c78bbf7d562" resname="job.save">
+        <source>job.save</source>
         <target>Save</target>
       </trans-unit>
-      <trans-unit id="f2a6c498fb90ee345d997f888fce3b18" resname="Delete">
-        <source>Delete</source>
+      <trans-unit id="558ec73a1aba151be028e28fa1665b72" resname="job.delete">
+        <source>job.delete</source>
         <target>Delete</target>
       </trans-unit>
-      <trans-unit id="05a3a24340b7b9cc8d4e08f0ef4f4dd9" resname="Last Run">
-        <source>Last Run</source>
+      <trans-unit id="60e8ea08ff9e04e030c333bdf533f2be" resname="job.last.run.title">
+        <source>job.last.run.title</source>
         <target>Last Run</target>
       </trans-unit>
-      <trans-unit id="9da1d7d297bfbe58a2b93cbdb9353017" resname="Next Run">
-        <source>Next Run</source>
+      <trans-unit id="dc2a145c357788c7670895c5e5163f9e" resname="job.next.run.title">
+        <source>job.next.run.title</source>
         <target>Next Run</target>
       </trans-unit>
-      <trans-unit id="e0950ed8e1bbfb47494aabd4e0f031cc" resname="Run Time">
-        <source>Run Time</source>
+      <trans-unit id="3029b0e7a42cfd8d7b93e0847ad32b61" resname="job.run.interval">
+        <source>job.run.interval</source>
         <target>Run Time</target>
       </trans-unit>
-      <trans-unit id="b17be3980329984800faadac35fbab7a" resname="No Jobs Found">
-        <source>No Jobs Found</source>
+      <trans-unit id="004bc1acfa213e030871f6e763f7665e" resname="jobs.not_found">
+        <source>jobs.not_found</source>
         <target>No Jobs Found</target>
       </trans-unit>
-      <trans-unit id="cf51066f49e517f274b8173cc265c60b" resname="Job">
-        <source>Job</source>
+      <trans-unit id="f0b4f4432ba490c253ac37b4458d2a5d" resname="job.name">
+        <source>job.name</source>
         <target>Job</target>
       </trans-unit>
-      <trans-unit id="c5301693c4e792bcd5a479ef38fb8f8d" resname="Run">
-        <source>Run</source>
+      <trans-unit id="c50064f659a9bc05e810716669b2406c" resname="run.id">
+        <source>run.id</source>
         <target>Run</target>
       </trans-unit>
-      <trans-unit id="c2ca16d048ec66e04bca283eab048ec2" resname="Host">
-        <source>Host</source>
+      <trans-unit id="67b3dba8bc6778101892eb77249db32e" resname="host">
+        <source>host</source>
         <target>Host</target>
       </trans-unit>
-      <trans-unit id="a76d4ef5f3f6a672bbfab2865563e530" resname="Time">
-        <source>Time</source>
+      <trans-unit id="f8d9d4b837f0f36ca8c759e1215b5b15" resname="job.run.time">
+        <source>job.run.time</source>
         <target>Time</target>
       </trans-unit>
       <trans-unit id="136fe0fdf2ec6434fc6481b78c7b0b9e" resname="app.name">
